<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/beerImage"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/beer_image_description"

            app:srcCompat="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/beerName"
            app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/beerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/beer_name"

            app:layout_constraintBottom_toTopOf="@id/beerTagline"
            app:layout_constraintLeft_toRightOf="@id/beerImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/beerTagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/beer_tagline"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/beerImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/beerName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>